--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ option(NCNN_STDIO "" OFF)
 option(NCNN_PIXEL "" OFF)
 option(NCNN_PIXEL_ROTATE "" OFF)
 option(NCNN_PIXEL_AFFINE "" OFF)
+option(NCNN_PIXEL_DRAWING "" OFF)
 option(NCNN_PLATFORM_API "" OFF)
 option(NCNN_VULKAN "" ON)
 option(NCNN_VULKAN_ONLINE_SPIRV "" ON)
@@ -113,6 +114,17 @@ option(WITH_LAYER_softplus "" OFF)
 option(WITH_LAYER_gru "" OFF)
 option(WITH_LAYER_multiheadattention "" OFF)
 option(WITH_LAYER_gelu "" OFF)
+option(WITH_LAYER_convolution1d "" OFF)
+option(WITH_LAYER_pooling1d "" OFF)
+option(WITH_LAYER_convolutiondepthwise1d "" OFF)
+option(WITH_LAYER_convolution3d "" OFF)
+option(WITH_LAYER_convolutiondepthwise3d "" OFF)
+option(WITH_LAYER_pooling3d "" OFF)
+option(WITH_LAYER_matmul "" OFF)
+option(WITH_LAYER_deconvolution1d "" OFF)
+option(WITH_LAYER_deconvolutiondepthwise1d "" OFF)
+option(WITH_LAYER_deconvolution3d "" OFF)
+option(WITH_LAYER_deconvolutiondepthwise3d "" OFF)
 
 add_subdirectory(ncnn)
 
