--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,7 @@ endif()
 option(NCNN_INSTALL_SDK "" OFF)
 option(NCNN_STRING "" OFF)
 option(NCNN_STDIO "" OFF)
+option(NCNN_C_API "" OFF)
 option(NCNN_PIXEL "" OFF)
 option(NCNN_PIXEL_ROTATE "" OFF)
 option(NCNN_PIXEL_AFFINE "" OFF)
@@ -28,6 +29,7 @@ option(NCNN_BUILD_TESTS "" OFF)
 option(NCNN_BUILD_TOOLS "" OFF)
 option(NCNN_BUILD_EXAMPLES "" OFF)
 option(NCNN_INT8 "" OFF)
+option(NCNN_BF16 "" OFF)
 option(NCNN_OPENMP "" OFF)
 option(NCNN_THREADS "" ON)
 option(NCNN_DISABLE_RTTI "" ON)
@@ -125,6 +127,12 @@ option(WITH_LAYER_deconvolution1d "" OFF)
 option(WITH_LAYER_deconvolutiondepthwise1d "" OFF)
 option(WITH_LAYER_deconvolution3d "" OFF)
 option(WITH_LAYER_deconvolutiondepthwise3d "" OFF)
+option(WITH_LAYER_einsum "" OFF)
+option(WITH_LAYER_deformableconv2d "" OFF)
+option(WITH_LAYER_glu "" OFF)
+option(WITH_LAYER_fold "" OFF)
+option(WITH_LAYER_unfold "" OFF)
+option(WITH_LAYER_gridsample "" OFF)
 
 add_subdirectory(ncnn)
 
