--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,7 +6,7 @@ on:
 
 env:
   VULKANSDK_VERSION: 1.3.231.1
-  DEVELOPER_DIR: /Applications/Xcode_12.4.app/Contents/Developer
+  DEVELOPER_DIR: /Applications/Xcode_14.0.1.app/Contents/Developer
   APPLICATION_NAME: vkpeak
 
 jobs:
@@ -29,19 +29,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
-    - name: cache-vulkansdk
-      id: cache-vulkansdk
-      uses: actions/cache@v1
-      with:
-        path: ${{ env.VULKANSDK_VERSION }}
-        key: vulkansdk-linux-x86_64-${{ env.VULKANSDK_VERSION }}
     - name: vulkansdk
-      if: steps.cache-vulkansdk.outputs.cache-hit != 'true'
       run: |
-        wget https://sdk.lunarg.com/sdk/download/${{ env.VULKANSDK_VERSION }}/linux/vulkansdk-linux-x86_64-${{ env.VULKANSDK_VERSION }}.tar.gz?Human=true -O vulkansdk-linux-x86_64-${{ env.VULKANSDK_VERSION }}.tar.gz
+        wget -q https://sdk.lunarg.com/sdk/download/${{ env.VULKANSDK_VERSION }}/linux/vulkansdk-linux-x86_64-${{ env.VULKANSDK_VERSION }}.tar.gz?Human=true -O vulkansdk-linux-x86_64-${{ env.VULKANSDK_VERSION }}.tar.gz
         tar -xf vulkansdk-linux-x86_64-${{ env.VULKANSDK_VERSION }}.tar.gz
-        rm -rf ${{ env.VULKANSDK_VERSION }}/source
-        find ${{ env.VULKANSDK_VERSION }} -type f | grep -v -E 'vulkan|glslang' | xargs rm
     - name: build
       run: |
         export VULKAN_SDK=`pwd`/${{ env.VULKANSDK_VERSION }}/x86_64
@@ -63,45 +54,37 @@ jobs:
 
   macos:
     needs: [setup]
-    runs-on: macos-11
+    runs-on: macos-12
     env:
       PACKAGENAME: ${{ env.APPLICATION_NAME }}-${{ needs.setup.outputs.VERSION }}-macos
     steps:
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
-    - name: cache-vulkansdk
-      id: cache-vulkansdk
-      uses: actions/cache@v1
-      with:
-        path: vulkansdk-macos-${{ env.VULKANSDK_VERSION }}
-        key: vulkansdk-macos-${{ env.VULKANSDK_VERSION }}
     - name: vulkansdk
-      if: steps.cache-vulkansdk.outputs.cache-hit != 'true'
       run: |
-        wget https://sdk.lunarg.com/sdk/download/${{ env.VULKANSDK_VERSION }}/mac/vulkansdk-macos-${{ env.VULKANSDK_VERSION }}.dmg?Human=true -O vulkansdk-macos-${{ env.VULKANSDK_VERSION }}.dmg
+        wget -q https://sdk.lunarg.com/sdk/download/${{ env.VULKANSDK_VERSION }}/mac/vulkansdk-macos-${{ env.VULKANSDK_VERSION }}.dmg?Human=true -O vulkansdk-macos-${{ env.VULKANSDK_VERSION }}.dmg
         hdiutil attach vulkansdk-macos-${{ env.VULKANSDK_VERSION }}.dmg
         cp -r /Volumes/vulkansdk-macos-${{ env.VULKANSDK_VERSION }} .
-        rm -rf vulkansdk-macos-${{ env.VULKANSDK_VERSION }}/Applications
-        find vulkansdk-macos-${{ env.VULKANSDK_VERSION }} -type f | grep -v -E 'vulkan|glslang|MoltenVK' | xargs rm
         hdiutil detach /Volumes/vulkansdk-macos-${{ env.VULKANSDK_VERSION }}
+        sudo vulkansdk-macos-${{ env.VULKANSDK_VERSION }}/InstallVulkan.app/Contents/MacOS/InstallVulkan --root $GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }} --accept-licenses --default-answer --confirm-command install
     - name: build-x86_64
       run: |
-        export VULKAN_SDK=`pwd`/vulkansdk-macos-${{ env.VULKANSDK_VERSION }}/macOS
+        export VULKAN_SDK=$GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }}/macOS
         mkdir build-x86_64 && cd build-x86_64
         cmake -DUSE_STATIC_MOLTENVK=ON -DCMAKE_OSX_ARCHITECTURES="x86_64" \
-            -DVulkan_INCLUDE_DIR=`pwd`/../vulkansdk-macos-${{ env.VULKANSDK_VERSION }}/MoltenVK/include \
-            -DVulkan_LIBRARY=`pwd`/../vulkansdk-macos-${{ env.VULKANSDK_VERSION }}/MoltenVK/MoltenVK.xcframework/macos-arm64_x86_64/libMoltenVK.a \
+            -DVulkan_INCLUDE_DIR=$GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }}/MoltenVK/include \
+            -DVulkan_LIBRARY=$GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }}/MoltenVK/MoltenVK.xcframework/macos-arm64_x86_64/libMoltenVK.a \
             ..
         cmake --build . -j 3
     - name: build-arm64
       run: |
-        export VULKAN_SDK=`pwd`/vulkansdk-macos-${{ env.VULKANSDK_VERSION }}/macOS
+        export VULKAN_SDK=$GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }}/macOS
         mkdir build-arm64 && cd build-arm64
         cmake -DUSE_STATIC_MOLTENVK=ON -DCMAKE_OSX_ARCHITECTURES="arm64" \
             -DCMAKE_CROSSCOMPILING=ON -DCMAKE_SYSTEM_PROCESSOR=arm64 \
-            -DVulkan_INCLUDE_DIR=`pwd`/../vulkansdk-macos-${{ env.VULKANSDK_VERSION }}/MoltenVK/include \
-            -DVulkan_LIBRARY=`pwd`/../vulkansdk-macos-${{ env.VULKANSDK_VERSION }}/MoltenVK/MoltenVK.xcframework/macos-arm64_x86_64/libMoltenVK.a \
+            -DVulkan_INCLUDE_DIR=$GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }}/MoltenVK/include \
+            -DVulkan_LIBRARY=$GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }}/MoltenVK/MoltenVK.xcframework/macos-arm64_x86_64/libMoltenVK.a \
             ..
         cmake --build . -j 3
     - name: package
@@ -121,26 +104,20 @@ jobs:
     needs: [setup]
     runs-on: windows-latest
     env:
+      UseMultiToolTask: true
+    env:
       PACKAGENAME: ${{ env.APPLICATION_NAME }}-${{ needs.setup.outputs.VERSION }}-windows
     steps:
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
-    - name: cache-vulkansdk
-      id: cache-vulkansdk
-      uses: actions/cache@v1
-      with:
-        path: VulkanSDK
-        key: VulkanSDK-${{ env.VULKANSDK_VERSION }}-Installer
     - name: vulkansdk
-      if: steps.cache-vulkansdk.outputs.cache-hit != 'true'
       run: |
         Invoke-WebRequest -Uri https://sdk.lunarg.com/sdk/download/${{ env.VULKANSDK_VERSION }}/windows/VulkanSDK-${{ env.VULKANSDK_VERSION }}-Installer.exe?Human=true -OutFile VulkanSDK-${{ env.VULKANSDK_VERSION }}-Installer.exe
-        7z x -aoa ./VulkanSDK-${{ env.VULKANSDK_VERSION }}-Installer.exe -oVulkanSDK
-        Remove-Item .\VulkanSDK\Demos, .\VulkanSDK\Config, .\VulkanSDK\Helpers, .\VulkanSDK\Source, .\VulkanSDK\Templates, .\VulkanSDK\Bin32, .\VulkanSDK\Lib32 -Recurse
+        ./VulkanSDK-${{ env.VULKANSDK_VERSION }}-Installer.exe --root $env:GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }} --accept-licenses --default-answer --confirm-command install
     - name: build
       run: |
-        $env:VULKAN_SDK="$(pwd)/VulkanSDK"
+        $env:VULKAN_SDK="$env:GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }}"
         mkdir build; cd build
         cmake -A x64 ..
         cmake --build . --config Release -j 2
