--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,6 @@ option(NCNN_PIXEL_AFFINE "" OFF)
 option(NCNN_PIXEL_DRAWING "" OFF)
 option(NCNN_PLATFORM_API "" OFF)
 option(NCNN_VULKAN "" ON)
-option(NCNN_VULKAN_ONLINE_SPIRV "" ON)
 option(NCNN_BUILD_BENCHMARK "" OFF)
 option(NCNN_BUILD_TESTS "" OFF)
 option(NCNN_BUILD_TOOLS "" OFF)
@@ -137,6 +136,8 @@ option(WITH_LAYER_glu "" OFF)
 option(WITH_LAYER_fold "" OFF)
 option(WITH_LAYER_unfold "" OFF)
 option(WITH_LAYER_gridsample "" OFF)
+option(WITH_LAYER_cumulativesum "" OFF)
+option(WITH_LAYER_copyto "" OFF)
 
 add_subdirectory(ncnn)
 
