--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -2,7 +2,7 @@ name: CI
 on: [push, pull_request]
 env:
   VULKANSDK_VERSION: 1.3.231.1
-  DEVELOPER_DIR: /Applications/Xcode_14.0.1.app/Contents/Developer
+  DEVELOPER_DIR: /Applications/Xcode_15.2.app/Contents/Developer
 
 jobs:
   windows:
@@ -10,7 +10,7 @@ jobs:
     env:
       UseMultiToolTask: true
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
       with:
         submodules: 'recursive'
     - name: vulkansdk
@@ -22,12 +22,12 @@ jobs:
         $env:VULKAN_SDK="$env:GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }}"
         mkdir build; cd build
         cmake -A x64 ..
-        cmake --build . --config Release -j 2
+        cmake --build . --config Release -j 4
 
   ubuntu:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
       with:
         submodules: 'recursive'
     - name: vulkansdk
@@ -39,12 +39,12 @@ jobs:
         export VULKAN_SDK=`pwd`/${{ env.VULKANSDK_VERSION }}/x86_64
         mkdir build && cd build
         cmake ..
-        cmake --build . -j 2
+        cmake --build . -j 4
 
   macos:
-    runs-on: macos-12
+    runs-on: macos-13
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
       with:
         submodules: 'recursive'
     - name: vulkansdk
@@ -58,17 +58,15 @@ jobs:
       run: |
         export VULKAN_SDK=$GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }}/macOS
         mkdir build-x86_64 && cd build-x86_64
-        cmake -DUSE_STATIC_MOLTENVK=ON -DCMAKE_OSX_ARCHITECTURES="x86_64" \
-            -DVulkan_INCLUDE_DIR=$GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }}/MoltenVK/include \
+        cmake -DCMAKE_OSX_ARCHITECTURES="x86_64" \
             -DVulkan_LIBRARY=$GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }}/MoltenVK/MoltenVK.xcframework/macos-arm64_x86_64/libMoltenVK.a \
             ..
-        cmake --build . -j 3
+        cmake --build . -j 4
     - name: build-arm64
       run: |
         export VULKAN_SDK=$GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }}/macOS
         mkdir build-arm64 && cd build-arm64
-        cmake -DUSE_STATIC_MOLTENVK=ON -DCMAKE_OSX_ARCHITECTURES="arm64" \
-            -DVulkan_INCLUDE_DIR=$GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }}/MoltenVK/include \
+        cmake -DCMAKE_OSX_ARCHITECTURES="arm64" \
             -DVulkan_LIBRARY=$GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }}/MoltenVK/MoltenVK.xcframework/macos-arm64_x86_64/libMoltenVK.a \
             ..
-        cmake --build . -j 3
+        cmake --build . -j 4
