--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -24,6 +24,20 @@ jobs:
         mkdir build; cd build
         cmake -A x64 ..
         cmake --build . --config Release -j 4
+        .\Release\vkpeak.exe
+
+  windows-arm:
+    runs-on: windows-11-arm
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        submodules: 'recursive'
+    - name: build
+      run: |
+        mkdir build; cd build
+        cmake -A arm64 ..
+        cmake --build . --config Release -j 4
+        .\Release\vkpeak.exe
 
   ubuntu:
     runs-on: ubuntu-latest
@@ -36,6 +50,7 @@ jobs:
         mkdir build && cd build
         cmake ..
         cmake --build . -j 4
+        ./vkpeak
 
   macos:
     runs-on: macos-13
@@ -55,6 +70,7 @@ jobs:
             -DVulkan_LIBRARY=$GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }}/macOS/lib/MoltenVK.xcframework/macos-arm64_x86_64/libMoltenVK.a \
             ..
         cmake --build . -j 4
+        ./vkpeak
     - name: build-arm64
       run: |
         mkdir build-arm64 && cd build-arm64
