--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -142,6 +142,7 @@ option(WITH_LAYER_shrink "" OFF)
 option(WITH_LAYER_rmsnorm "" OFF)
 option(WITH_LAYER_spectrogram "" OFF)
 option(WITH_LAYER_inversespectrogram "" OFF)
+option(WITH_LAYER_flip "" OFF)
 
 add_subdirectory(ncnn)
 
