--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,8 +25,10 @@ jobs:
         cmake -A x64 ..
         cmake --build . --config Release -j 4
 
-  ubuntu:
+  linux:
     runs-on: ubuntu-latest
+    container:
+      image: quay.io/pypa/manylinux1_x86_64
     steps:
     - uses: actions/checkout@v6
       with:
@@ -45,7 +47,7 @@ jobs:
         submodules: 'recursive'
     - name: vulkansdk
       run: |
-        wget https://sdk.lunarg.com/sdk/download/${{ env.VULKANSDK_VERSION }}/mac/vulkansdk-macos-${{ env.VULKANSDK_VERSION }}.zip?Human=true -O vulkansdk-macos-${{ env.VULKANSDK_VERSION }}.zip
+        wget -q https://sdk.lunarg.com/sdk/download/${{ env.VULKANSDK_VERSION }}/mac/vulkansdk-macos-${{ env.VULKANSDK_VERSION }}.zip?Human=true -O vulkansdk-macos-${{ env.VULKANSDK_VERSION }}.zip
         unzip vulkansdk-macos-${{ env.VULKANSDK_VERSION }}.zip
         sudo vulkansdk-macOS-${{ env.VULKANSDK_VERSION }}.app/Contents/MacOS/vulkansdk-macOS-${{ env.VULKANSDK_VERSION }} --root $GITHUB_WORKSPACE/${{ env.VULKANSDK_VERSION }} --accept-licenses --default-answer --confirm-command install
     - name: build-x86_64
