--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,8 +27,6 @@ jobs:
   linux:
     needs: [setup]
     runs-on: ubuntu-latest
-    container:
-      image: quay.io/pypa/manylinux_2_28_x86_64
     env:
       PACKAGENAME: ${{ needs.setup.outputs.APPNAME }}-${{ needs.setup.outputs.VERSION }}-linux
     steps:
@@ -37,9 +35,7 @@ jobs:
         submodules: 'recursive'
     - name: build
       run: |
-        mkdir build && cd build
-        cmake ..
-        cmake --build . -j 4
+        docker run --rm -v ${{ github.workspace }}:/workspace -w /workspace quay.io/pypa/manylinux1_x86_64 /bin/bash -c "mkdir -p build && cd build && cmake .. && cmake --build . -j 4"
     - name: package
       run: |
         mkdir -p ${{ env.PACKAGENAME }}
